# pizzashop-api-python

./: .gitignore  .python-version  alembic.ini  app.py  docker-compose.yml  pyproject.toml  seed.py
sqlalchemy/: env.py
sqlalchemy/scripts/: 0000_broken_madelyne_pryor.sql
src/: server.py
src/db/: connection.py  migrate.py  seed.py
src/db/schema/: __init__.py  auth_links.py  evaluations.py  order_items.py  orders.py  products.py  restaurants.py  users.py
src/http/: authentication.py
src/http/routes/: approve_order.py  authenticate_from_link.py  cancel_order.py  deliver_order.py  dispatch_order.py  get_daily_receipt_in_period.py  get_day_orders_amount.py  get_managed_restaurant.py  get_month_canceled_orders.py  get_month_orders_amount.py  get_month_receipt.py  get_orders.py  get_orders_details.py  get_popular_products.py  get_profile.py  register_restaurant.py  send_authentication_link.py  sign_out.py  update_profile.py
src/http/routes/errors/: not_a_manager_error.py  unauthorized_error.py
